--- a/app/assets/stylesheets/_notifications.scss
+++ b/app/assets/stylesheets/_notifications.scss
@@ -132,6 +132,7 @@ $notification-items: (
       border-top: 1px solid $list-group-border-color;
       position: relative;
       padding: 10px 0px;
+      min-height: 110px;
       &:first-child {
         border-top: none;
       }
